--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,3 +1,4 @@
-streamlit
-spacy
+streamlit>=1.30
+spacy>=3.7
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
+
